--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "randombytes": "^2.0.3",
     "socket.io": "^2.0.2",
     "socket.io-client": "^2.0.2",
-    "winston": "^2.2.0",
-    "snyk": "^1.41.1"
+    "winston": "^2.2.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
@@ -44,6 +43,5 @@
     "istanbul": "^0.4.5",
     "mocha": "^3.1.0",
     "require-dir": "^0.3.1"
-  },
-  "snyk": true
+  }
 }
